Make the nav even tighter, but we still aren't preventing many-item navs from wrapping below about 890px. Having too many nav items will do that.

--- a/wp-content/themes/rivard-report/less/defaults.less
+++ b/wp-content/themes/rivard-report/less/defaults.less
@@ -135,6 +135,9 @@ h1 {
       text-transform: uppercase;
       margin-right:3.25em;
 
+      &:last-child {
+        margin-right: 0;
+      }
       .caret{
         display:none;
         padding:0 4px;
@@ -846,12 +849,14 @@ aside.related {
     }
   }
   #main-nav.navbar .nav>li {
-      margin-right: 1.7em;
+      margin-right: 1.5em;
   }
 }
 @media (max-width: 1000px) {
+  // this does not prevent wrapping if you have way too items in the nav
   #main-nav.navbar .nav>li {
-      margin-right: 1.75em;
+      margin-right: 1.30em;
+      font-size: 13px; //1px smaller
   }
 }
 @media (max-width: 768px) {
